--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,9 @@
     "node": "20"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^5.1.1"
+    "firebase-functions": "^5.1.1",
+    "nodemailer": "^7.0.10"
   }
 }
